--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -22,7 +22,7 @@
   width: 100%;
   height: 500px;
   object-fit: contain;
-  /* animation: move 3s infinite ease alternate; */
+  animation: move 3s infinite ease alternate; 
 }
 
 @keyframes move {
